trunk/Archive2/71/02d8f0337c39b3/output
main.cpp: In function 'int iof(int*)':
main.cpp:9:12: warning: unused variable 'j' [-Wunused-variable]
     int n, j=0;
            ^
main.cpp: At global scope:
main.cpp:36:11: error: '::main' must return 'int'
 void main()
           ^
main.cpp: In function 'int main()':
main.cpp:45:17: warning: ignoring return value of 'int system(const char*)', declared with attribute warn_unused_result [-Wunused-result]
  system("pause");
                 ^
